# tsunagu

./: Cargo.toml
tsunagu_bridge/: Cargo.toml
tsunagu_cli/: Cargo.toml
tsunagu_cli/src/: cli.rs  config.rs  main.rs
tsunagu_common/: Cargo.toml
tsunagu_common/src/: config.rs  device.rs  encryption.rs  error.rs  lib.rs  transfer.rs
tsunagu_common/src/discovery/: mdns_discovery.rs  mod.rs
tsunagu_common/src/models/: device_info.rs  file_info.rs  mod.rs  transfer_info.rs
tsunagu_ui/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
tsunagu_ui/android/app/: build.gradle
tsunagu_ui/android/app/src/main/: AndroidManifest.xml
tsunagu_ui/integration_test/: simple_test.dart
tsunagu_ui/ios/Runner/: Info.plist
tsunagu_ui/ios/Runner.xcodeproj/: project.pbxproj
tsunagu_ui/lib/: main.dart
tsunagu_ui/lib/src/rust/: frb_generated.dart
tsunagu_ui/linux/: CMakeLists.txt  my_application.cc
tsunagu_ui/linux/flutter/: generated_plugins.cmake
tsunagu_ui/macos/Runner.xcodeproj/: project.pbxproj
tsunagu_ui/macos/Runner/Configs/: AppInfo.xcconfig
tsunagu_ui/rust_builder/: pubspec.yaml
tsunagu_ui/rust_builder/android/: build.gradle  settings.gradle
tsunagu_ui/rust_builder/ios/: rust_lib_tsunagu_ui.podspec
tsunagu_ui/rust_builder/linux/: CMakeLists.txt
tsunagu_ui/rust_builder/macos/: rust_lib_tsunagu_ui.podspec
tsunagu_ui/rust_builder/windows/: CMakeLists.txt
tsunagu_ui/web/: index.html  manifest.json
tsunagu_ui/windows/: CMakeLists.txt
tsunagu_ui/windows/flutter/: generated_plugins.cmake
tsunagu_ui/windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
