[workspace]
members = [
    "tsunagu_bridge",
    "tsunagu_cli",
    "tsunagu_common",
]

[workspace.dependencies]
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
gethostname = "0.5.0"
