[package]
name = "tsunagu_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsunagu_common = { path = "../tsunagu_common" }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
gethostname = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }
config = "0.13.3"
