[package]
name = "tsunagu_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
gethostname = { workspace = true }
async-trait = "0.1.68"
socket2 = "0.5.7"
ring = "0.17.8"
base64 = "0.22.1"
local-ip-address = "0.6.2"
mdns-sd = "0.10.5"
